# iPhotron-LocalPhotoAlbumManager

./: .gitignore  .pre-commit-config.yaml  =6.10.1  AGENT.md  CONTRIBUTING.md  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_READINESS.md  LICENSE  MIGRATION_GUIDE.md  PHASE_1_4_IMPLEMENTATION_PLAN.md  README.md  REFACTORING_SUMMARY.md  VERIFICATION_CHECKLIST.md  full_test_output.txt  pyproject.toml  pytest.ini  reproduce_issue.py  test_cleanup.db-shm  test_cleanup.db-wal  test_favorites_db.db-shm  test_favorites_db.db-wal  test_filmstrip.py  test_nested.db  test_output.txt  test_persistent_fav.db-shm  test_persistent_fav.db-wal  test_safety.db-shm  test_safety.db-wal  verify_nested.py  verify_sqlite_index.py
.github/workflows/: test.yml
.iPhoto/: index.db
.jules/: bolt.md
demo/: album-dashboard.py  aspect.py  crop_coordinate_demo.py  curve.py  definition.py  demo_uv_solver.py  denoise.py  drag_button.py  level-demo.py  people-dashboard.py  sharpen.py  spline.py  verify_uv_constraint_solver.py  video-demo.py  vignette.py
demo/color-selector/: algorithm.py  ui.py
demo/face-cluster/: db.py  image_utils.py  local_imports.py  main.py  pipeline.py  ui.py  worker.py
demo/video/: __init__.py  __main__.py  cache.py  config.py  extraction.py  hwaccel.py  probe.py  ui.py  worker.py
demo/white balance/: warmth-ui.py  warmth.py  white balance.py
doc/: BUILD_EXE.md
docs/: ARCHITECTURE_DIAGRAMS.md  BUILD_EXE.md  CHANGELOG.md  MOVE_DELETE_OPTIMIZATION_PLAN.md  QML_REFACTORING_PLAN.md  README_CROP_ANALYSIS.md  REFACTORING_SUMMARY_ZH.md  UV_CONSTRAINT_SOLVER.md  V2.00.md  V3.00.md  V4.00.md  VIDEO_LIVEPHOTO_EDITING.md  album-switching-performance-investigation.md  album-switching-performance-issue.md  architecture.md  critical-bugs-found-and-fixed.md  crop-black-border-prevention-analysis-en.md  crop-black-border-prevention-analysis.md  crop-display-coordinate-issue.md  crop-mechanism-diagram.txt  crop_algorithms_analysis.md  crop_algorithms_comparison.md  development.md  evaluate_phase3.md  fix_verification.md  issue_crop_box_displacement_further_fixes.md  issue_crop_box_displacement_with_rotation.md  issue_unified_sidecar_crop_coordinate_handling.md  major-breakthrough-fast-path-optimization.md  p0-p1-implementation-summary.md  security.md  v2.1.1.md  v2.3.0.md
docs/face&OCR/: DEVELOPMENT.md  REQUIREMENTS.md
docs/finished/: iPhotron_分支审查报告与第三阶段开发方案.md  iPhotron_重构实施文档_第二阶段.md
docs/misc/: BUILD_DEB.md  BUILD_EXE.md  BUILD_SCAN_C_EXTENSION.md  MACOS_MAP_GL_TRANSPARENCY_NOTES.md  PEOPLE_DASHBOARD_POPUP_REGRESSIONS.md  PROJECT_POPUP_GUARDRAILS.md  spline.py
docs/readme/: README_de.md  README_zh-CN.md
docs/refactor/: 04-implementation-checklist.md  04-refactoring-roadmap.md  05-current-progress.md  05-phase1-infrastructure.md  08-phase4-performance.md  19-gui-update-navigation-session-migration.md  README.md  evaluate step2.md  evaluate_phase1_2.md  evaluate_phase4.md  iPhotron_architecture_troubleshooting.md  iPhotron_compatibility_cleanup_table.md  iPhotron_compatibility_lifecycle_plan.md  iPhotron_第七阶段分支审查报告与第八阶段开发方案_不涉及main对比.md  iPhotron_第七阶段分支审查报告与补完方案.md  iPhotron_第七阶段长期治理规范.md  iPhotron_第三阶段分支审查报告与第四阶段开发方案.md  iPhotron_第三阶段分支审查报告与补完方案.md  iPhotron_第五阶段分支审查报告与第六阶段开发方案.md  iPhotron_第五阶段收官规范.md  iPhotron_第六阶段分支审查报告与第七阶段开发方案.md  iPhotron_第六阶段工程化收官规范.md  iPhotron_第四阶段分支审查报告与第五阶段开发方案.md  iPhotron_第四阶段维护边界规范.md  large_library_performance_refactor_log.md  step1 evaluate
docs/referactor/: LARGE_FILE_REFACTORING_PLAN.md  referactor_evaluation2.md  referactor_evaluation_2.md  referactor_evaluation_3.md
docs/requirements/: GALLERY_SCROLL_PERFORMANCE_PHASE1_HANDOFF.md  GALLERY_SCROLL_PERFORMANCE_REARCHITECTURE.md  raw_support.md  (+5 more)
reproductions/: repro_reverse_sync.py
scripts/: build_nuitka_fast.sh  build_nuitka_macos.sh  build_nuitka_windows.ps1  build_scan_utils.ps1  build_scan_utils.sh  sync_macos_map_extension.py
tests/: conftest.py  test_album_manifest.py  test_album_sidebar.py  test_album_sidebar_menu_styling.py  test_album_tree_model.py  test_app_facade_session_open.py  test_app_live_sync.py  test_app_open_album_lazy.py  test_aspect_ratio_constraint.py  test_asset_delegate_debug_state.py  test_asset_dto_converter_none_guard.py  test_asset_grid_long_press.py  test_asset_grid_scroll.py  test_asset_list_model_live_buffer.py  test_asset_loader_worker_pagination.py  test_batch_insert.py  test_bw_range_bug.py  test_cache_stats.py  test_chinese_path_sync.py  test_crop_auto_apply.py  test_crop_boundary_constraints.py  test_crop_box_state.py  test_crop_scale_offset_persistence.py  test_crop_values_coordinate_conversion.py  test_custom_tooltip.py  test_definition_sidecar.py  test_delegate_render_math.py  test_denoise_selective_color_coexistence.py  test_denoise_sidecar.py  test_disk_thumbnail_cache.py  test_dual_model_switching.py  test_edit_sidebar_preview_worker.py  test_exiftool_fix.py  test_export_format_wiring.py  test_facade_cancel_scans.py  test_face_cluster_db.py  test_face_cluster_demo.py  test_face_cluster_image_utils.py  test_face_cluster_pipeline.py  test_face_cluster_smoke_imports.py  (+104 more)
tools/: check_adapter_boundary.py  check_architecture.py  check_coordinator_asset_data_source_usage.py  check_layer_boundaries.py  check_runtime_entry_usage.py
tools/osmand_render_helper_native/: .gitignore  CMakeLists.txt  build_helper.ps1  build_helper_official.ps1  build_native_widget_msvc.ps1
tools/osmand_render_helper_native/cmake/Qt5Core/: Qt5CoreConfig.cmake
tools/osmand_render_helper_native/cmake/Qt5Network/: Qt5NetworkConfig.cmake
tools/osmand_render_helper_native/cmake/Qt6/: Qt6Config.cmake  Qt6ConfigVersion.cmake
tools/osmand_render_helper_native/dist-linux/: osmand_render_helper
tools/osmand_render_helper_native/official_cpp_tools/: CMakeLists.txt  tools.cmake
tools/osmand_render_helper_native/src/: file_system_core_resources_provider.cpp  file_system_core_resources_provider.h  main.cpp  osmand_native_map_widget.cpp  osmand_native_map_widget.h  osmand_native_widget_bridge.cpp
tools/osmand_render_helper_native/toolchains/: amd64-windows-gcc.cmake
(+766 files in other folders)
