[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iPhoto"
version = "2.3.0"
description = "Folder-native photo manager with Live Photo support"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "iPhoto Team"}]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "jsonschema>=4",
  "PySide6>=6.10.1",
  "Pillow>=10",
  "pillow-heif>=0.16",
  "imagehash>=4",
  "xxhash>=3",
  "python-dateutil>=2",
  "opencv-python-headless>=4.10",
  "reverse-geocoder>=1.5.1",
  "pyexiftool>=0.5.5",
  "numpy>=2.3.4",
  "numba>=0.60",
  "mapbox-vector-tile>=1.2",
  "av>=11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-qt"
]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-qt",
    "ruff",
    "black",
    "mypy",
    "types-Pillow",
    "types-python-dateutil",
]

[project.scripts]
iphoto = "iPhoto.cli:app"
iphoto-gui = "iPhoto.gui.main:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "BLE", "A", "C4", "PIE", "Q", "RUF"]
ignore = ["E203"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
qt_api = "pyside6"

[tool.typer]
pretty_exceptions_enable = true
